// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test User component Snapshot testing should match snapshot with userCard 1`] = `
Array [
  <div
    className="userCard"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      id="488edda9-f042-434f-8162-e4dddf7055f5"
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "fontSize": "1.4rem",
          "height": "100%",
          "justifyContent": "space-around",
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <div
        className="userCard__header u-margin-bottom-medium"
      >
        <img
          alt="Mrs Emily Mortensen"
          src="https://randomuser.me/api/portraits/thumb/women/78.jpg"
        />
        <span
          className="user__title"
        >
          Mrs
        </span>
        <span
          className="user__first"
        >
          Emily
        </span>
        <span
          className="user__last"
        >
          Mortensen
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          Age: 
        </span>
        <span>
          31
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          email: 
        </span>
        <span>
          emily.mortensen@example.com
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          Phone: 
        </span>
        <span>
          94033936
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          Street: 
        </span>
        <span>
          8651 Tingstedet
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          Postcode: 
        </span>
        <span>
          98755
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          City: 
        </span>
        <span>
          Randers Nv
        </span>
      </div>
    </div>
  </div>,
  <div
    className="userCard"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      id="bdc71f4e-e874-4575-96b5-5cfc6959458e"
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "fontSize": "1.4rem",
          "height": "100%",
          "justifyContent": "space-around",
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <div
        className="userCard__header u-margin-bottom-medium"
      >
        <img
          alt="Miss Nurdan Tazegül"
          src="https://randomuser.me/api/portraits/thumb/women/9.jpg"
        />
        <span
          className="user__title"
        >
          Miss
        </span>
        <span
          className="user__first"
        >
          Nurdan
        </span>
        <span
          className="user__last"
        >
          Tazegül
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          Age: 
        </span>
        <span>
          31
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          email: 
        </span>
        <span>
          nurdan.tazegul@example.com
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          Phone: 
        </span>
        <span>
          (012)-335-1433
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          Street: 
        </span>
        <span>
          6949 Şehitler Cd
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          Postcode: 
        </span>
        <span>
          91771
        </span>
      </div>
      <div
        className="u-margin-bottom-medium"
      >
        <span
          className="bold"
        >
          City: 
        </span>
        <span>
          Balıkesir
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`test User component Snapshot testing should match snapshot with userList 1`] = `
Array [
  <div
    className=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="userList"
      id="488edda9-f042-434f-8162-e4dddf7055f5"
    >
      <img
        alt="Mrs Emily Mortensen"
        src="https://randomuser.me/api/portraits/thumb/women/78.jpg"
      />
      <span
        className="user__title"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Mrs
      </span>
      <span
        className="user__first"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Emily
      </span>
      <span
        className="user__last"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Mortensen
      </span>
    </div>
  </div>,
  <div
    className=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="userList"
      id="bdc71f4e-e874-4575-96b5-5cfc6959458e"
    >
      <img
        alt="Miss Nurdan Tazegül"
        src="https://randomuser.me/api/portraits/thumb/women/9.jpg"
      />
      <span
        className="user__title"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Miss
      </span>
      <span
        className="user__first"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Nurdan
      </span>
      <span
        className="user__last"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Tazegül
      </span>
    </div>
  </div>,
]
`;
